# grandmas-cookbook-api

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
cookbooks/: admin.py  apps.py  models.py  permissions.py  signals.py  urls.py
cookbooks/api/: serializers.py  urls.py  views.py
cookbooks/management/commands/: load_sample_recipes.py
cookbooks/migrations/: 0001_initial.py
cookbooks/tests/: conftest.py  factories.py  test_cookbooks.py
core/: admin.py  models.py
core/api/: serializers.py  urls.py  views.py
core/management/commands/: load_sample_users.py
core/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_first_name_and_more.py  0002_populate_user.py
grandmas_cookbook/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: default.conf
